--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="output.css" rel="stylesheet" />
   </head>
 
-  <body dir="rtl" class="bg-light-background">
+  <body dir="rtl" class="bg-slate-200">
     <div id="root">
       <!-- Free Shipping -->
       <section class="free-shipping">
@@ -41,7 +41,7 @@
 
       <main class="main text-light-textPrimary bg-light-background">
         <!-- Header -->
-        <header class="px-5 py-6">
+        <header class="px-5 py-3 md:py-6">
           <div class="container mx-auto">
             <div class="grid items-center justify-center grid-cols-12">
               <!-- Logo -->
@@ -107,9 +107,7 @@
         </header>
 
         <!-- Product Notes -->
-        <section
-          class="px-5 pt-20 pb-10 text-center important-note md:text-start"
-        >
+        <section class="p-5 md:py-12 text-center important-note md:text-start">
           <div class="container mx-auto">
             <div
               class="grid justify-between gap-16 grid-cols-1 md:grid-cols-12"
@@ -144,7 +142,7 @@
         </section>
 
         <!-- Brands Images-->
-        <section class="brands-images px-5 py-7 bg-slate-200">
+        <section class="brands-images p-5 md:py-12 bg-slate-200">
           <div class="container mx-auto overflow-hidden">
             <div
               class="flex items-center justify-between max-w-full animate-marquee md:animate-none gap-36 md:gap-14"
@@ -174,7 +172,7 @@
         </section>
 
         <!-- Hero Section-->
-        <section class="hero px-5 py-10">
+        <section class="hero p-5 md:py-12">
           <div class="container mx-auto">
             <div class="grid grid-cols-1 gap-5 md:gap-16 md:grid-cols-12">
               <!-- Slider-->
@@ -219,11 +217,12 @@
                   </div>
 
                   <!-- Thumbnail -->
-                  <div class="thumbnail-swiper hidden mt-5 md:block"
-                  data-aos="fade-up"
-                  data-aos-offset="200"
-                  data-aos-delay="90"
-                  data-aos-duration="1000"
+                  <div
+                    class="thumbnail-swiper hidden mt-5 md:block"
+                    data-aos="fade-up"
+                    data-aos-offset="200"
+                    data-aos-delay="90"
+                    data-aos-duration="1000"
                   >
                     <div class="flex items-center gap-2 swiper-wrapper">
                       <div class="flex-1 cursor-pointer thumbnail swiper-slide">
@@ -256,11 +255,12 @@
               </div>
 
               <div class="col-span-6">
-                <div class="content text-center md:text-start"
-                data-aos="fade-up"
-                data-aos-offset="200"
-                data-aos-delay="99"
-                data-aos-duration="1000"
+                <div
+                  class="content text-center md:text-start"
+                  data-aos="fade-up"
+                  data-aos-offset="200"
+                  data-aos-delay="99"
+                  data-aos-duration="1000"
                 >
                   <div
                     class="flex items-center justify-center md:justify-start gap-1 personal-img"
@@ -334,7 +334,7 @@
                   data-aos-offset="200"
                   data-aos-delay="99"
                   data-aos-duration="1000"
-                  >
+                >
                   <div
                     class="bg-light-textPrimary p-4 w-[90px] h-[100px] rounded-lg flex flex-col items-center justify-between relative overflow-hidden"
                   >
@@ -387,11 +387,12 @@
                 </div>
 
                 <!-- Form Order-->
-                <div class="form-order"
-                data-aos="fade-up"
-                data-aos-offset="200"
-                data-aos-delay="99"
-                data-aos-duration="1000"
+                <div
+                  class="form-order"
+                  data-aos="fade-up"
+                  data-aos-offset="200"
+                  data-aos-delay="99"
+                  data-aos-duration="1000"
                 >
                   <div class="container mx-auto">
                     <form class="text-sm" action="">
@@ -490,7 +491,7 @@
 
         <!-- Store Features -->
         <section
-          class="store-features px-5 py-10 bg-slate-200 text-sm md:text-base"
+          class="store-features p-5 md:py-10 bg-slate-200 text-sm md:text-base"
         >
           <div
             class="container mx-auto grid grid-cols-6 md:grid-cols-12 gap-7 justify-items-center"
@@ -534,16 +535,17 @@
         </section>
 
         <!-- Features Products -->
-        <section class="features-products px-5 py-10">
+        <section class="features-products p-5 md:py-12">
           <div class="container mx-auto">
             <div
               class="grid grid-cols-1 md:grid-cols-12 justify-items-center md:justify-items-stretch items-center gap-5"
             >
-              <div class="col-span-4 grid gap-5 h-[35vh]"
-              data-aos="fade-up"
-              data-aos-offset="200"
-              data-aos-delay="99"
-              data-aos-duration="1000"
+              <div
+                class="col-span-4 grid gap-5 h-[35vh]"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="99"
+                data-aos-duration="1000"
               >
                 <div class="flex items-center gap-4 justify-end">
                   <h1 class="text-right">صيغة مبتكرة علمياً</h1>
@@ -573,11 +575,12 @@
                 </div>
               </div>
 
-              <div class="col-span-4 flex justify-center"
-              data-aos="fade-up"
-              data-aos-offset="200"
-              data-aos-delay="50"
-              data-aos-duration="1000"
+              <div
+                class="col-span-4 flex justify-center"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="50"
+                data-aos-duration="1000"
               >
                 <img
                   class="max-w-full h-auto"
@@ -586,11 +589,12 @@
                 />
               </div>
 
-              <div class="col-span-4 grid gap-5 h-[35vh]"
-              data-aos="fade-up"
-              data-aos-offset="200"
-              data-aos-delay="99"
-              data-aos-duration="1000"
+              <div
+                class="col-span-4 grid gap-5 h-[35vh]"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="99"
+                data-aos-duration="1000"
               >
                 <div class="flex items-center gap-4 justify-start">
                   <img
@@ -622,16 +626,17 @@
         </section>
 
         <!-- Technical Features -->
-        <section class="technical-features">
+        <section class="technical-features p-5 md:py-12">
           <div class="container mx-auto">
             <h1 class="text-center text-3xl font-bold mb-5">مراجعات عملائنا</h1>
             <!-- Swiper -->
             <div class="max-w-3xl mx-auto relative">
-              <div class="mySwiper-2 overflow-hidden"
-              data-aos="fade-up"
-              data-aos-offset="200"
-              data-aos-delay="99"
-              data-aos-duration="1000"
+              <div
+                class="mySwiper-2 overflow-hidden"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="99"
+                data-aos-duration="1000"
               >
                 <div class="swiper-wrapper">
                   <div
@@ -702,7 +707,7 @@
         </section>
 
         <!-- video Product -->
-        <section class="video-product px-5 py-10">
+        <section class="video-product p-5 md:py-12">
           <div class="container mx-auto">
             <div class="flex flex-col justify-center items-center">
               <h1 class="text-center text-3xl font-bold mb-8">
@@ -727,7 +732,7 @@
         </section>
 
         <!-- Recommends People -->
-        <section class="recommends-people px-5 py-10">
+        <section class="recommends-people p-5 md:py-12">
           <div class="container mx-auto">
             <h1 class="text-center text-3xl font-bold mb-8">يوصي بنا النخبة</h1>
             <div
@@ -789,7 +794,7 @@
         </section>
 
         <!-- Services -->
-        <section>
+        <section class="services p-5 md:py-12">
           <div class="container mx-auto">
             <h1 class="text-center text-3xl font-bold mb-8">
               الأسئلة الأكثر شيوعا
@@ -910,7 +915,7 @@
               </div>
             </div>
             <!-- button -->
-            <div class="mx-auto mt-16 mb-16 flex justify-center items-center">
+            <div class="mx-auto mt-5 md:mt-12 flex justify-center items-center">
               <img class="max-w-full w-4" src="./imags/btn-l.svg" alt="" />
               <button
                 class="flex items-center mx-1 px-4 py-2 bg-light-primary text-light-textPrimary rounded-full hover:bg-[#0b875e] transition"
@@ -919,6 +924,75 @@
                 <i class="mr-2 -mt-1 text-xl icon-cart"></i>
               </button>
               <img class="max-w-full w-4" src="./imags/btn-r.svg" alt="" />
+            </div>
+          </div>
+        </section>
+
+        <!-- footer -->
+        <footer class="footer px-5 pt-12 pb-52 md:pb-36 bg-slate-200">
+          <div class="container mx-auto">
+            <div
+              class="content flex flex-col justify-center items-center gap-8"
+            >
+              <!-- logo -->
+              <h1 class="text-center text-3xl font-bold">لوجو</h1>
+              <!-- links -->
+              <ul
+                class="flex flex-wrap justify-center items-center gap-5 md:gap-10"
+              >
+                <li class=""><a href="">سياسة الشحن</a></li>
+                <li class=""><a href="">سياسة الخصوصية</a></li>
+                <li class=""><a href="">شروط الإستخدام</a></li>
+                <li class=""><a href="">شروط الإسترجاع</a></li>
+              </ul>
+              <!-- soical -->
+              <div class="soical">
+                <div class="icons flex justify-center items-center gap-5">
+                  <h1 class="text-sm md:text-2xl font-bold">تواصل معنا وتابعنا :</h1>
+                  <i class="icon-facebook text-3xl"></i>
+                  <i class="icon-messenger text-3xl"></i>
+                  <i class="icon-whatsapp text-3xl"></i>
+                  <i class="icon-instagram text-3xl"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </footer>
+        <!-- static -->
+        <section
+          id="static-section"
+          class="static-section px-5 fixed bottom-0 bg-transparent inset-x-0 w-full z-50 opacity-0 translate-y-full transition-all duration-500"
+        >
+          <div class="container mx-auto">
+            <div
+              class="flex justify-center md:justify-between items-center bg-slate-200 rounded-2xl p-3 shadow-2xl shadow-light-textPrimary/50 border border-light-primary mb-5"
+            >
+              <div class="flex justify-center items-center flex-wrap gap-5">
+                <img
+                  class="w-[65px] h-[65px] max-w-full object-cover rounded-2xl border border-light-primary"
+                  src="./imags/img-important-note.png"
+                  alt=""
+                />
+                <div class="flex flex-col justify-center items-center gap-3 md:block">
+                  <h1 class="font-bold">القارئ الإلكتروني</h1>
+                  <b class="font-bold">2500 ج.م</b>
+                  <b class="text-sm line-through text-light-textSecondary mx-2"
+                    >5000 ج.م</b
+                  >
+                  <button
+                    class="animate-blink px-4 py-1 bg-light-primary rounded-full hover:bg-[#0b875e] transition"
+                  >
+                    <span>اطلب الآن</span>
+                    <i class="mr-2 -mt-1 text-xl icon-cart"></i>
+                  </button>
+                </div>
+              </div>
+              <button
+                class="hidden md:flex items-center px-16 py-2 bg-light-primary text-light-textPrimary rounded-full hover:bg-[#0b875e] transition"
+              >
+                <span>اطلب الان</span>
+                <i class="mr-2 -mt-1 text-xl icon-cart"></i>
+              </button>
             </div>
           </div>
         </section>
