--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
         <!-- static -->
         <section
           id="static-section"
-          class="static-section px-5 fixed bottom-0 bg-transparent inset-x-0 w-full z-50 opacity-0 translate-y-full transition-all duration-500"
+          class="static-section px-5 fixed left-0 bottom-0 z-50 bg-transparent inset-x-0 w-full opacity-0 translate-y-full transition-all duration-500"
         >
           <div class="container mx-auto">
             <div
