--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,6 @@
     <script src="swiper-bundle.min.js"></script>
 
     <!-- JS -->
-    <!-- <script src="script-obfuscated.js"></script> -->
-    <script src="index.js"></script>
+    <script src="script-obfuscated.js"></script>
   </body>
 </html>
