--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
         </section>
 
         <!-- footer -->
-        <footer class="footer px-5 pt-12 pb-52 md:pb-36 bg-slate-200">
+        <footer class="footer px-5 pt-12 pb-28 md:pb-36 bg-slate-200">
           <div class="container mx-auto">
             <div
               class="content flex flex-col justify-center items-center gap-8"
@@ -948,7 +948,9 @@
               <!-- soical -->
               <div class="soical">
                 <div class="icons flex justify-center items-center gap-5">
-                  <h1 class="text-sm md:text-2xl font-bold">تواصل معنا وتابعنا :</h1>
+                  <h1 class="text-sm md:text-2xl font-bold">
+                    تواصل معنا وتابعنا :
+                  </h1>
                   <i class="icon-facebook text-3xl"></i>
                   <i class="icon-messenger text-3xl"></i>
                   <i class="icon-whatsapp text-3xl"></i>
@@ -967,25 +969,25 @@
             <div
               class="flex justify-center md:justify-between items-center bg-slate-200 rounded-2xl p-3 shadow-2xl shadow-light-textPrimary/50 border border-light-primary mb-5"
             >
-              <div class="flex justify-center items-center flex-wrap gap-5">
+              <div class="flex justify-center items-center gap-2">
                 <img
-                  class="w-[65px] h-[65px] max-w-full object-cover rounded-2xl border border-light-primary"
+                  class="hidden md:block w-[65px] h-[65px] max-w-full object-cover rounded-2xl border border-light-primary"
                   src="./imags/img-important-note.png"
                   alt=""
                 />
-                <div class="flex flex-col justify-center items-center gap-3 md:block">
-                  <h1 class="font-bold">القارئ الإلكتروني</h1>
-                  <b class="font-bold">2500 ج.م</b>
+                <div class="">
+                  <h1 class="text-sm md:text-base font-bold">القارئ الإلكتروني</h1>
+                  <b class="text-sm md:text-base font-bold">2500 ج.م</b>
                   <b class="text-sm line-through text-light-textSecondary mx-2"
                     >5000 ج.م</b
                   >
-                  <button
-                    class="animate-blink px-4 py-1 bg-light-primary rounded-full hover:bg-[#0b875e] transition"
-                  >
-                    <span>اطلب الآن</span>
-                    <i class="mr-2 -mt-1 text-xl icon-cart"></i>
-                  </button>
                 </div>
+                <button
+                  class="animate-blink px-4 py-1 bg-light-primary rounded-full hover:bg-[#0b875e] transition"
+                >
+                  <span>اطلب الآن</span>
+                  <i class="mr-2 -mt-1 text-xl icon-cart"></i>
+                </button>
               </div>
               <button
                 class="hidden md:flex items-center px-16 py-2 bg-light-primary text-light-textPrimary rounded-full hover:bg-[#0b875e] transition"
