--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                   <div
                     class="price flex justify-center md:justify-start items-center gap-5"
                   >
-                    <b class="text-xl md:text-2xl font-bold">2500 ج.م</b>
+                    <b class="text-xl md:text-2xl">2500 ج.م</b>
                     <span class="text-sm line-through text-light-textSecondary"
                       >5000 ج.م</span
                     >
@@ -977,7 +977,7 @@
                 />
                 <div class="">
                   <h1 class="text-sm md:text-base font-bold">القارئ الإلكتروني</h1>
-                  <b class="text-sm md:text-base font-bold">2500 ج.م</b>
+                  <b class="text-sm md:text-base">2500 ج.م</b>
                   <b class="text-sm line-through text-light-textSecondary mx-2"
                     >5000 ج.م</b
                   >
