--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
               <h1 class="text-center text-3xl font-bold">لوجو</h1>
               <!-- links -->
               <ul
-                class="flex flex-wrap justify-center items-center gap-x-5 gap-y-2 md:gap-x-10 md:gap-y-2 text-center"
+                class="flex flex-wrap justify-center items-center gap-5 md:gap-10"
               >
                 <li class=""><a href="">سياسة الشحن</a></li>
                 <li class=""><a href="">سياسة الخصوصية</a></li>
