--- a/index.html
+++ b/index.html
@@ -978,8 +978,8 @@
                 <div class="">
                   <h1 class="text-sm md:text-base font-bold">القارئ الإلكتروني</h1>
                   <b class="text-sm md:text-base">2500 ج.م</b>
-                  <b class="text-sm line-through text-light-textSecondary mx-2"
-                    >5000 ج.م</b
+                  <span class="text-sm line-through text-light-textSecondary mx-2"
+                    >5000 ج.م</span
                   >
                 </div>
                 <button
